[metadata]
url = https://github.com/Ahuge/sept
author = Alex Hughes
author_email = ahughesalex@gmail.com
maintainer = Alex Hughes
maintainer_email = ahughesalex@gmail.com
description = The Simple Extensible Path Template (sept) is a simple to configure templating system designed at relatively simple path translation or path generation from a dictionary of data.
long_description = file:Readme.md
long_description_content_type = text/markdown; charset=UTF-8
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python

[options]
python_requires = >= 2.7.11
install_requires = 
    pyparsing
    six
packages = find:

[options.package_data]
* =
    data/*

[options.extras_require]
doc =
    sphinx
test =
    pytest
    coverage
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = sept/_version.py
versionfile_build = sept/_version.py
tag_prefix = 
parentdir_prefix = 
