[metadata]
url = https://github.com/Ahuge/sept
author = Alex Hughes
author_email = ahughesalex@gmail.com
maintainer = Alex Hughes
maintainer_email = ahughesalex@gmail.com
description = The Simple Extensible Path Template (sept) is a simple to configure templating system designed at relatively simple path translation or path generation from a dictionary of data.
long_description = file:Readme.md
long_description_content_type = text/markdown; charset=UTF-8
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup


[options]
python_requires = >= 2.7.11
install_requires = 
    pyparsing==2.4.7
    six
packages = find:

[options.package_data]
* =
    data/*

[options.extras_require]
doc =
    sphinx
    ipykernel
    nbsphinx
test =
    pytest
    coverage
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = sept/_version.py
versionfile_build = sept/_version.py
tag_prefix = 
parentdir_prefix = 
